src/objects/Master_BNF__c.object
<CustomObject>
    <fields>
        <fullName>Revised_BNF_Comment__c</fullName>
        <label>Revised BNF Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revised_BNF_Date__c</fullName>
        <inlineHelpText>Date revision takes effect. For regular deliveries, it refers to the data period.</inlineHelpText>
        <label>Revised BNF Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revised_BNF_Reasons__c</fullName>
        <inlineHelpText>Used to add additional fees (usually Pass through) once opportunity is &quot;in Hand&quot; in SFDC system. User must clone BNF of original &quot;In Hand&quot; opportunity and check Revised BNF and fill in appropriate fields for Pass Through, if applicable</inlineHelpText>
        <label>Revised BNF Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Revised_BNF__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Additional Fees</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Change Billing Frequency</fullName>
                </value>
                <value>
                    <fullName>Change in Contract Timing</fullName>
                </value>
                <value>
                    <fullName>Change in Distribution</fullName>
                </value>
                <value>
                    <fullName>Change in Number of Copies</fullName>
                </value>
                <value>
                    <fullName>Change of Address/Contact Person</fullName>
                </value>
                <value>
                    <fullName>Change of Content</fullName>
                </value>
                <value>
                    <fullName>Change PO number</fullName>
                </value>
                <value>
                    <fullName>Change Prices or Discounts (not Price Increase)</fullName>
                </value>
                <value>
                    <fullName>Other- please describe in the comments section</fullName>
                </value>
                <value>
                    <fullName>Pass Thru Expense</fullName>
                </value>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revised_BNF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this is an add-on to a previously &quot;In Hand&quot; opportunity where a BNF had been submitted and approved.</inlineHelpText>
        <label>Revised BNF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Base_Code__c</fullName>
        <label>SAP Base Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contract__c</fullName>
        <label>SAP Contract</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Master_Contract__c</fullName>
        <label>SAP Master Contract</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_PC_Code__c</fullName>
        <inlineHelpText>Client code from SAP system</inlineHelpText>
        <label>SAP PC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>IMS Billing Org Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IMS_Sales_Org__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AR01</fullName>
                </value>
                <value>
                    <fullName>AR02</fullName>
                </value>
                <value>
                    <fullName>AT52</fullName>
                </value>
                <value>
                    <fullName>AU01</fullName>
                </value>
                <value>
                    <fullName>AU20</fullName>
                </value>
                <value>
                    <fullName>BD01</fullName>
                </value>
                <value>
                    <fullName>BE03</fullName>
                </value>
                <value>
                    <fullName>BE04</fullName>
                </value>
                <value>
                    <fullName>BO01</fullName>
                </value>
                <value>
                    <fullName>BR01</fullName>
                </value>
                <value>
                    <fullName>BR05</fullName>
                </value>
                <value>
                    <fullName>BT01</fullName>
                </value>
                <value>
                    <fullName>CA03</fullName>
                </value>
                <value>
                    <fullName>CH03</fullName>
                </value>
                <value>
                    <fullName>CH07</fullName>
                </value>
                <value>
                    <fullName>CH08</fullName>
                </value>
                <value>
                    <fullName>CH12</fullName>
                </value>
                <value>
                    <fullName>CH13</fullName>
                </value>
                <value>
                    <fullName>CH51</fullName>
                </value>
                <value>
                    <fullName>CL01</fullName>
                </value>
                <value>
                    <fullName>CL02</fullName>
                </value>
                <value>
                    <fullName>CL03</fullName>
                </value>
                <value>
                    <fullName>CN03</fullName>
                </value>
                <value>
                    <fullName>CN04</fullName>
                </value>
                <value>
                    <fullName>CO01</fullName>
                </value>
                <value>
                    <fullName>DE04</fullName>
                </value>
                <value>
                    <fullName>DE50</fullName>
                </value>
                <value>
                    <fullName>DK04</fullName>
                </value>
                <value>
                    <fullName>DO01</fullName>
                </value>
                <value>
                    <fullName>EC01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Copy_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Copy: Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master BNFs (Second Copy Account)</relationshipLabel>
        <relationshipName>Master_BNFs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Copy_Address__c</fullName>
        <label>Second Copy: Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Copy_City__c</fullName>
        <label>Second Copy: City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Copy_Country__c</fullName>
        <label>Second Copy: Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Copy_State_Province__c</fullName>
        <label>Second Copy: State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Copy_Zip_Postal_Code__c</fullName>
        <label>Second Copy: Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Copy</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Master BNFs (Second Copy)</relationshipLabel>
        <relationshipName>Master_BNFs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To: Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master BNFs (Ship To Account)</relationshipLabel>
        <relationshipName>Master_BNFs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <label>Ship To: Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To: City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To: Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State_Province__c</fullName>
        <label>Ship To: State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip_Postal_Code__c</fullName>
        <label>Ship To: Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Master BNFs (Ship To)</relationshipLabel>
        <relationshipName>Master_BNFs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Master BNFs (Sold To)</relationshipLabel>
        <relationshipName>Master_BNFs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <inlineHelpText>This field is used only for data subscription sales. Enter the specifications for the data subscription, if required.</inlineHelpText>
        <label>Specification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyte</fullName>
                </value>
                <value>
                    <fullName>Class 5</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>ICD 9</fullName>
                </value>
                <value>
                    <fullName>Manufactuer/Corp</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>USC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Contractor_Amount__c</fullName>
        <inlineHelpText>The value of additional expenses being passed on to customer, usually C&amp;S opportunities. Select by filling in amount to be passed on.</inlineHelpText>
        <label>Sub Contractor Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <inlineHelpText>For data related BNFs, choose from Custom, Dataview, Partial, or Syndicated.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Dataview</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Syndicated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Therapy_Area__c</fullName>
        <label>Therapy Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antibiotics, Antifungals</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Central Nervous System</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Female Health</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>HIV, Anti-virals</fullName>
                </value>
                <value>
                    <fullName>Metabolics</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Pain</fullName>
                </value>
                <value>
                    <fullName>Respiratory</fullName>
                </value>
                <value>
                    <fullName>Rheumatoid Arthritis</fullName>
                </value>
                <value>
                    <fullName>Transplantation</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>Multi / Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Amount__c</fullName>
        <inlineHelpText>The value of additional expenses being passed on to customer, usually C&amp;S opportunities. Select by filling in amount to be passed on.</inlineHelpText>
        <label>Travel Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Master BNF</label>
    <nameField>
        <displayFormat>MBNF-{000000}</displayFormat>
        <label>Master BNF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master BNFs</pluralLabel>
    <recordTypes>
        <fullName>Combined_Contract</fullName>
        <active>true</active>
        <label>Combined Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Combined_Invoice</fullName>
        <active>true</active>
        <label>Combined Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Single_Contract</fullName>
        <active>true</active>
        <label>Single Contract</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>